# win-service-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  README_zh.md
.github/workflows/: rust.yml
examples/rustfs_manager/: Cargo.toml
examples/rustfs_manager/config/: config.toml
examples/rustfs_manager/scripts/: deploy.ps1
examples/rustfs_manager/src/: config.rs  main.rs
src/: config.rs  error.rs  lib.rs  service_manager.rs  status.rs
