[package]
name = "win-service-rs"
version = "0.0.1"
edition = "2024"
description = "A Rust library for Windows service management using windows-rs"
repository = "https://github.com/houseme/win-service-rs"
license = "MIT or Apache-2.0"
keywords = ["windows", "service", "management", "windows-rs"]
categories = ["os::windows-apis"]

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32",
    "Win32_System_Services",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading"
] }
tokio = { version = "1.45", features = ["sync", "rt"], optional = true }

[features]
async = ["tokio"]
